--- a/index.html
+++ b/index.html
@@ -10,31 +10,33 @@
 <body>
     <div class="container">
         <div class="Calc-container">
-            <div class="screen"></div>
+            <div class="screen">yeye <br>de</div>
             <div class="keys">
                 <div class="num-container">
-                    <button class="nums">1</button>
-                    <button class="nums">2</button>
-                    <button class="nums">3</button>
-                    <button class="nums">4</button>
-                    <button class="nums">5</button>
-                    <button class="nums">6</button>
-                    <button class="nums">7</button>
-                    <button class="nums">8</button>
-                    <button class="nums">9</button>
-                    <button class="nums">0</button>
-                    <button class="nums">.</button>
-                    <button class="operator">=</button>
+                    <button data-key = "1" class="key">1</button>
+                    <button data-key = "2" class="key">2</button>
+                    <button data-key = "3" class="key">3</button>
+                    <button data-key = "4" class="key">4</button>
+                    <button data-key = "5" class="key">5</button>
+                    <button data-key = "6" class="key">6</button>
+                    <button data-key = "7" class="key">7</button>
+                    <button data-key = "8" class="key">8</button>
+                    <button data-key = "9" class="key">9</button>
+                    <button data-key = "0" class="key">0</button>
+                    <button data-key = "." class="key">.</button>
+                    <button data-key = "=" class="key">=</button>
                 </div>
-
+                
                 <div class="operation-conatiner">
-                    <button class="operator">CE</button>
-                    <button class="operator">+</button>
-                    <button class="operator">-</button>
-                    <button class="operator">*</button>
-                    <button class="operator">/</button>
+                    <button data-key = "ce" class="key">CE</button>
+                    <button data-key = "+" class="key">+</button>
+                    <button data-key = "-" class="key">-</button>
+                    <button data-key = "*" class="key">*</button>
+                    <button data-key = "/" class="key">/</button>
                 </div>
             </div>
         </div>
     </div>
 </body>
+<script src="script.js"></script>
+</html>
