implemented eval for simple calculator for now 7

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                     <button data-key = "9" class="key">9</button>
                     <button data-key = "0" class="key">0</button>
                     <button data-key = "." class="key">.</button>
-                    <button data-key = "=" class="key">=</button>
+                    <button data-key = "=" class="key equal">=</button>
                 </div>
                 
                 <div class="operation-conatiner">
